adds click function

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "gatsby": "^2.0.117",
     "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react-dom": "^16.8.0",
+    "react-mail-form": "^1.0.2"
   },
   "repository": {
     "type": "git",
